2021-02-22  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (libpoke_modules): Add intprops.
	(gui_modules): Add alloca.
	(gnulib_modules): Add host-cpu-c-abi.

2021-02-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (EC_overflow): Define.
	(E_overflow): Likewise.
	* libpoke/pvm.h (PVM_E_OVERFLOW): Define.
	(PVM_E_OVERFLOW_MSG): Likewise.
	(PVM_E_OVERFLOW_ESTATUS): Likewise.
	* doc/poke.texi (Exceptions): Document E_overflow.

2021-02-22  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (libpoke_modules): Add the free-posix module.

2021-02-22  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk: Do not assume HOME is defined in the environment.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-misc.c (quit_cmd): Define.
	* poke/pk-cmd.c (dot_cmds): Add quit_cmd.
	* doc/poke.texi (quit command): New section.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/hacking.org: Add David Faust to the write after approval
	list.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* bootstrap.conf (buildreq): Fix indentation.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (crc32): Avoid too long lines.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Invoking poke): Leave empty lines between
	argument descriptions, and add missing arguments.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (pk_print_version): Print the poke hand
	conditionally.
	(parse_args_2): Do not print the poke hand in the --version
	output.
	* poke/pk-repl.c (banner): DO print the poke hand as part of the
	poke banner :)
	* poke/pk-cmd-misc.c (pk_cmd_version): Likewise.

2021-02-21  Indu Bhagat  <indu.bhagat@oracle.com>
	    Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-save.pk (save): Fix invocation to copy.
	* testsuite/poke.cmd/save-2.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-02-21  Jose E. Marchesi  <jemarch@gnu.org>
