@@ -1271,7 +1271,7 @@ pkl_asm_insn (pkl_asm pasm, enum pkl_asm_insn insn, ...)
                    can use 64-bit elements in 32-bit machines.  We
                    have hacks to prevent the assert below in both
                    pkl_asm_note and the push instructions.  */
-#if __WORDSIZE != 64
+#if defined POKE_HOST_32BIT
                 assert (0);
 #endif
                 pvm_program_append_val_parameter (pasm->program, val);
@@ -1581,7 +1581,7 @@ pkl_asm_note (pkl_asm pasm, const char *str)
 {
   /* note doesn't work in 32-bit because of jitter's inability to pass
      64-bit pointers as arguments to instructions in 32-bit.  */
-#if __WORDSIZE == 64
+#if !defined POKE_HOST_32BIT
   pkl_asm_insn (pasm, PKL_INSN_NOTE, pvm_make_string (str));
 #endif
 }
